      * Weapon sets much more flexible, verbose, and easy to use
      * Weapon sets remember slots, not outfits
      * Route is visible on all map modes now
      * Blink and flicker drives can use double tap arrow keys to move around
      * Toolkit is cached in a framebuffer for much faster rendering
      * Intrinsic outfit details now visible from the equipment menu
   * New Content
      * New mechanic for House Sirius called flow to unlock psychic powers
         * Gives passive bonuses to Sirius ships
         * Outfits allow use on non-Sirius ships
      * 8 new missions
         * Finish the Minerva campaign
         * Nebula refugees
      * Many new events
         * Abandoned stations with secrets
         * Greedy pirates looking for domination
         * Challenges of the mind
         * Mysterious signals
         * More points of interest
      * Many, many new systems and space objects
         * 67 new star systems with 123 new space objects
         * New graphics for space objects
      * Tons of new outfits
         * Sirius flow outfits
         * Completely reworked Sirius weapons too
         * Point defense systems
         * New accessories
         * Intrinsic outfits
         * and more!
      * Many new outfit graphics
      * New NPC graphics
      * More NPC and news messages
      * Added the Space Trader Society faction
      * Custom death animations for many ships
      * More ways to increase fleet capacity
      * The pirate clans are now more differentiated in terms of AI behaviour and taunts
      * More factional landing messages
   * Engine
      * Map system viewer is more compact
      * Added hook.hail_spob
      * Events support tags
      * Editor supports tags
      * Library to handle conditionals for mission computer missions
      * Added support for disabling specific patrol lanes from being generated
      * Support for Lua scripting for ships
      * Changed api of evt.claim and misn.claim