@@ -49,6 +49,7 @@
       * Blink and flicker drives can use double tap arrow keys to move around
       * Toolkit is cached in a framebuffer for much faster rendering
       * Intrinsic outfit details now visible from the equipment menu
+      * Visually indicate which pilots are scanning the player on the overlay and radars
    * New Content
       * New mechanic for House Sirius called flow to unlock psychic powers
          * Gives passive bonuses to Sirius ships
